# magnus

./: LICENSE  README.md  example.py
fr_rank_rs/: Cargo.toml
fr_rank_rs/src/: lib.rs
magnus/: __init__.py  codes.py  magnus.py  presentation.py  solver.py
tests/: test_core.py
