[package]
name = "fr_rank_rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[lib]
name = "fr_rank_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
numpy = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
